--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,24 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       # Makes sure to log into Dockerhub
-      - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      - name: Container Registry Login
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          file: ./dockerfile
           push: true
-          no-cache: true
-          tags: |
-            coolguy1771/resume-dot-witl-dot-xyz:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
