--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
+          tags: latest
           labels: ${{ steps.meta.outputs.labels }}
