--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: Cross Compile resume-witl-dot-xyz
 on:
   push:
     branches: [ main ]
+    tags:
+        - 'v*'
 
 jobs:
   build:
@@ -27,6 +29,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -36,5 +45,5 @@ jobs:
           file: ./dockerfile
           push: true
           no-cache: true
-          tags: |
-            coolguy1771/resume-dot-witl-dot-xyz:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
