--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          
+
       # Makes sure to log into Dockerhub
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -60,5 +60,7 @@ jobs:
           file: ./dockerfile
           push: true
           no-cache: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ghcr.io/coolguy1771/resume:${{ steps.meta.outputs.tags }}
+            coolguy1771/resume-dot-witl-dot-xyz:${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
