--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ name: Cross Compile resume-witl-dot-xyz
 on:
   push:
     branches: [ main ]
-    tags:
-        - 'v*'
 
 env:
   REGISTRY: ghcr.io
@@ -14,9 +12,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
@@ -28,12 +23,6 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       # Makes sure to log into Dockerhub
       - name: Login to DockerHub
@@ -50,17 +39,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      
-
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          file: ./dockerfile
           push: true
-          no-cache: true
           tags: |
-            ghcr.io/coolguy1771/resume:${{ steps.meta.outputs.tags }}
-            coolguy1771/resume-dot-witl-dot-xyz:${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            ghcr.io/coolguy1771/resume:1.0.0
+            coolguy1771/resume-dot-witl-dot-xyz:1.0.0
